folder structure refactorings
